Project level refactoring Bug fixing Tests improving logic

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 server.port=8080
 server.servlet.session.timeout=30m
+server.servlet.session.persistent=false
 
 spring.mvc.hiddenmethod.filter.enabled=true
 spring.info.build.encoding=UTF-8
