--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,5 +1,6 @@
 server.port=8080
 server.servlet.session.timeout=30m
+server.servlet.session.persistent=false
 
 spring.mvc.hiddenmethod.filter.enabled=true
 spring.info.build.encoding=UTF-8
@@ -37,5 +38,6 @@ spring.quartz.auto-startup=true
 spring.quartz.scheduler-name=quartzScheduler
 
 logging.level.root=ERROR
+
 spring.main.log-startup-info=false
 spring.main.banner-mode=OFF
