JWT integration Profile security configuration type variety added

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -40,3 +40,5 @@ spring.quartz.scheduler-name=quartzScheduler
 logging.level.root=INFO
 
 spring.mvc.log-request-details=true
+
+spring.profiles.active=token
