--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,7 @@
     <maven.compiler.target>1.7</maven.compiler.target>
 
     <spring.boot.version>2.7.3</spring.boot.version>
+    <json.web.token.version>0.11.5</json.web.token.version>
   </properties>
 
   <dependencies>
@@ -140,6 +141,12 @@
       <version>6.0.0.Alpha7</version>
       <type>pom</type>
     </dependency>
+    <!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind -->
+    <dependency>
+      <groupId>com.fasterxml.jackson.core</groupId>
+      <artifactId>jackson-databind</artifactId>
+      <version>2.13.4</version>
+    </dependency>
     <!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-core -->
     <dependency>
       <groupId>com.fasterxml.jackson.core</groupId>
@@ -164,6 +171,23 @@
       <groupId>org.reflections</groupId>
       <artifactId>reflections</artifactId>
       <version>0.10.2</version>
+    </dependency>
+    <dependency>
+      <groupId>io.jsonwebtoken</groupId>
+      <artifactId>jjwt-api</artifactId>
+      <version>${json.web.token.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>io.jsonwebtoken</groupId>
+      <artifactId>jjwt-impl</artifactId>
+      <version>${json.web.token.version}</version>
+      <scope>runtime</scope>
+    </dependency>
+    <dependency>
+      <groupId>io.jsonwebtoken</groupId>
+      <artifactId>jjwt-jackson</artifactId>
+      <version>${json.web.token.version}</version>
+      <scope>runtime</scope>
     </dependency>
   </dependencies>
 </project>
