--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -30,6 +30,7 @@ spring.flyway.url=${DB_URL}
 spring.flyway.user=${DB_USERNAME}
 spring.flyway.password=${DB_PASSWORD}
 spring.flyway.locations=classpath:migration
+spring.flyway.out-of-order=true
 spring.flyway.baseline-on-migrate=true
 spring.flyway.enabled=true
 
