--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -29,6 +29,7 @@ spring.mail.default-encoding=UTF-8
 spring.flyway.url=${DB_URL}
 spring.flyway.user=${DB_USERNAME}
 spring.flyway.password=${DB_PASSWORD}
+spring.flyway.out-of-order=true
 spring.flyway.locations=classpath:migration
 spring.flyway.baseline-on-migrate=true
 spring.flyway.enabled=true
