--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,10 +5,11 @@ server.servlet.session.persistent=false
 spring.mvc.hiddenmethod.filter.enabled=true
 spring.info.build.encoding=UTF-8
 
-spring.jpa.show-sql=true
+spring.jpa.show-sql=false
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.open-in-view=false
 
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=${DB_URL}
@@ -37,6 +38,7 @@ spring.flyway.enabled=true
 spring.quartz.startup-delay=0s
 spring.quartz.auto-startup=true
 spring.quartz.scheduler-name=quartzScheduler
+spring.quartz.wait-for-jobs-to-complete-on-shutdown=true
 
 logging.level.root=INFO
 
