--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -9,6 +9,7 @@ spring.jpa.show-sql=false
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.open-in-view=false
 
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=${DB_URL}
@@ -37,6 +38,7 @@ spring.flyway.enabled=true
 spring.quartz.startup-delay=0s
 spring.quartz.auto-startup=true
 spring.quartz.scheduler-name=quartzScheduler
+spring.quartz.wait-for-jobs-to-complete-on-shutdown=true
 
 logging.level.root=ERROR
 
